--- a/views/quizes/author.ejs
+++ b/views/quizes/author.ejs
@@ -8,7 +8,7 @@
 <body>
 <h2>Quiz: el juego de las preguntas</h2>
 <br>
-<a href="https://plus.google.com/+JavierGalianPedre%C3%B1o/posts" target="_new">
+<a href="https://plus.google.com/+JavierGalianPedre%C3%B1o/about" target="_new">
 Jos&eacute; Javier Gali&aacute;n Pedre&ntilde;o
 <br>
 <img src="/imagen/photo.jpg">
