--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -8,6 +8,6 @@
 <body>
 <h2>Quiz: el juego de las preguntas</h2>
 <%= respuesta %><p>
-<a href="/quizes/question">Inténtelo otra vez</a>
+<a href="/quizes/">Inténtelo otra vez</a>
 </body>
 </html>
