--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Quiz</title>
-<link rel="stylesheet" href="/stylesheets/style.css"/>
-</head>
-<body>
+
 <form method="get" action="/quizes/<%= quiz.id %>/answer">
 Pregunta: <%= quiz.pregunta %> <p>
-<input type="text" name="respuesta" value="Respuesta"/>
+<input type="text" name="respuesta" value="Responde aqui" onFocus="this.value = '';"/>
 <input type="submit" value="Enviar"/>
 </form>
-</body>
-</html>
+
