Editar y campo "tema"

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,4 @@
 <h3>Bienvenido a <%= title %></h3>
-<p>El portal donde podr&aacute; crear sus propios juegos!</p>
+<br/>
+<br/>
+<p>&iexcl;El portal donde podr&aacute; crear sus propios juegos!</p>
