--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,5 +1,5 @@
 <form name="form1" method="get" action="quizes">
-Texto para buscar: 
+Texto para buscar:
 <input type="text" name="search" value="<%=search%>">
 <input type="submit" value="Enviar">
 <input type="button" value="Mostrar todas" onClick="window.location='quizes';">
@@ -8,14 +8,18 @@ Texto para buscar:
 <% var i; for(i=0; i < quizes.length; i++) { %>
 	<tr align="left">
 		<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>&nbsp;[<%= quizes[i].tema %>]</td>
+		<% if (session.user) { %>
 		<td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
 		<td>
 			<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
 				<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">borrar</button>
 			</form>
 		</td>
+		<% } %>
 	</tr>
-<% } %>
+	<% } %>
 </table>
-<p>
+<p/>
+<% if (session.user) { %>
 <a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+<% } %>
