--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -7,11 +7,11 @@ Texto para buscar:
 <table>
 <% var i; for(i=0; i < quizes.length; i++) { %>
 	<tr align="left">
-		<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>&nbsp;[<%= quizes[i].tema %>]</td>
+		<td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>&nbsp;[<%= quizes[i].tema %>]</td>
 		<% if (session.user) { %>
-		<td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
+		<td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
 		<td>
-			<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+			<form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
 				<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">borrar</button>
 			</form>
 		</td>
